{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 119,
  "lineage": "745c6bc7-d706-ed70-64c7-6fb619c868c6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.196.170.118",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-27T03:49:45.594-08:00",
            "id": "projects/skyglass-composer/regions/us-east1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "skyglass-composer",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_to_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-27T03:49:56.918-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skyglass-composer/global/firewalls/allow-access-to-jenkins-web",
            "log_config": [],
            "name": "allow-access-to-jenkins-web",
            "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
            "priority": 1000,
            "project": "skyglass-composer",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/firewalls/allow-access-to-jenkins-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "jenkins-web"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-27T03:49:56.813-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skyglass-composer/global/firewalls/allow-ssh-to-jenkins",
            "log_config": [],
            "name": "allow-ssh-to-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
            "priority": 1000,
            "project": "skyglass-composer",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/firewalls/allow-ssh-to-jenkins",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "bastion",
              "jenkins-ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssl_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-27T03:49:56.801-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skyglass-composer/global/firewalls/allow-ssl-to-bastion",
            "log_config": [],
            "name": "allow-ssl-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
            "priority": 1000,
            "project": "skyglass-composer",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/firewalls/allow-ssl-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "jenkins_master_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-11-27T03:51:19.726-08:00",
            "id": "projects/skyglass-composer/regions/us-east1/forwardingRules/jenkins-master-forwarding-rule",
            "ip_address": "34.138.38.66",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "jenkins-master-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "8080",
            "project": "skyglass-composer",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/forwardingRules/jenkins-master-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/targetPools/jenkins-master-target-pool"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_http_health_check.jenkins_master_health_check",
            "google_compute_instance.bastion",
            "google_compute_instance.jenkins_master",
            "google_compute_network.management",
            "google_compute_subnetwork.private_subnets",
            "google_compute_subnetwork.public_subnets",
            "google_compute_target_pool.jenkins-master-target-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-8-v20200316",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/zones/us-east1-b/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skyglass-composer/zones/us-east1-b/instances/bastion",
            "instance_id": "3167331650049648019",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ec2-user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC19ARF4swEzUv3C4mjD7RbwzWGHFgruvIkKuFhxRzVSupVVSK7MGW9rlk4WTBt1DTGYbUmBtLl8zpGvefTi6ryCvQUz2YBDIRR+JXuJPvVMK4Twk54IKFUw9ORs/PwbTRLNMfkyK7M80e4UyZXlYiLE4DcwHVZqHDVqmFSPUKmKdCo6ifCXnmFGhi/6AyW6j0LOfY9+g2uUrU7cHt99mZaLc0SycHsL3Lu34KiAca0Bs/wKnNMAgYpVC9/mF8BywCvDm41uRQhH7JPFxwLXdBjNcc+Hi3Rip7dMk+70WMSMYdOsptlMpmR1lns9sbHfTzFSUq8Llb8OsGCv8fKBkGtLb95wzGnzuXBJY+fVRH80aRcIT1rNIsD6Kb64sqRwU+I8aVDclX0k58czkPxGRdgPGmYfp0SgvMqwdoMjTII [...]
            },
            "metadata_fingerprint": "9tt2-P0xyXY=",
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.170.118",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
                "network_ip": "10.0.1.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/subnetworks/public-10-0-1-0",
                "subnetwork_project": "skyglass-composer"
              }
            ],
            "project": "skyglass-composer",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/zones/us-east1-b/instances/bastion",
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_network.management",
            "google_compute_subnetwork.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/images/jenkins-master-v22041",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/zones/us-east1-b/disks/jenkins-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skyglass-composer/zones/us-east1-b/instances/jenkins-master",
            "instance_id": "5744776390923756923",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ec2-user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC19ARF4swEzUv3C4mjD7RbwzWGHFgruvIkKuFhxRzVSupVVSK7MGW9rlk4WTBt1DTGYbUmBtLl8zpGvefTi6ryCvQUz2YBDIRR+JXuJPvVMK4Twk54IKFUw9ORs/PwbTRLNMfkyK7M80e4UyZXlYiLE4DcwHVZqHDVqmFSPUKmKdCo6ifCXnmFGhi/6AyW6j0LOfY9+g2uUrU7cHt99mZaLc0SycHsL3Lu34KiAca0Bs/wKnNMAgYpVC9/mF8BywCvDm41uRQhH7JPFxwLXdBjNcc+Hi3Rip7dMk+70WMSMYdOsptlMpmR1lns9sbHfTzFSUq8Llb8OsGCv8fKBkGtLb95wzGnzuXBJY+fVRH80aRcIT1rNIsD6Kb64sqRwU+I8aVDclX0k58czkPxGRdgPGmYfp0SgvMqwdoMjTII [...]
            },
            "metadata_fingerprint": "9tt2-P0xyXY=",
            "name": "jenkins-master",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
                "network_ip": "10.0.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/subnetworks/private-10-0-0-0",
                "subnetwork_project": "skyglass-composer"
              }
            ],
            "project": "skyglass-composer",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/zones/us-east1-b/instances/jenkins-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jenkins-ssh",
              "jenkins-web"
            ],
            "tags_fingerprint": "76p_tfNyHZA=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_instance.bastion",
            "google_compute_network.management",
            "google_compute_subnetwork.private_subnets",
            "google_compute_subnetwork.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/skyglass-composer/global/networks/management",
            "mtu": 0,
            "name": "management",
            "project": "skyglass-composer",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "private_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-27T03:49:57.062-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/skyglass-composer/regions/us-east1/routers/private-router-management",
            "name": "private-router-management",
            "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
            "project": "skyglass-composer",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/routers/private-router-management"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "skyglass-composer/us-east1/private-router-management/nat-management",
            "min_ports_per_vm": 0,
            "name": "nat-management",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "skyglass-composer",
            "region": "us-east1",
            "router": "private-router-management",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/subnetworks/private-10-0-0-0",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/subnetworks/private-10-0-2-0",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.management",
            "google_compute_router.private_router",
            "google_compute_subnetwork.private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-27T03:49:57.382-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/skyglass-composer/regions/us-east1/subnetworks/private-10-0-0-0",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-10-0-0-0",
            "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skyglass-composer",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/subnetworks/private-10-0-0-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-27T03:49:57.371-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/skyglass-composer/regions/us-east1/subnetworks/private-10-0-2-0",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-10-0-2-0",
            "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skyglass-composer",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/subnetworks/private-10-0-2-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-27T03:49:57.138-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/skyglass-composer/regions/us-east1/subnetworks/public-10-0-1-0",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-10-0-1-0",
            "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skyglass-composer",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/subnetworks/public-10-0-1-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-27T03:49:58.101-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/skyglass-composer/regions/us-east1/subnetworks/public-10-0-3-0",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "public-10-0-3-0",
            "network": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/global/networks/management",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skyglass-composer",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skyglass-composer/regions/us-east1/subnetworks/public-10-0-3-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    }
  ]
}